--- a/styles/global.css
+++ b/styles/global.css
@@ -163,3 +163,7 @@ input[type="range"]::-moz-range-track {
   opacity: 0 !important;
   transform: translateY(-20px) !important;
 }
+.center-text{
+  margin: 0 auto;
+  text-align: center;
+}
