--- a/app/admin/styles/users.module.scss
+++ b/app/admin/styles/users.module.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    max-width: 1300px;
+    max-width: 87vw;
     overflow: auto;
     max-height: 800px;
     @media (max-width:880px) {
