--- a/app/assets/components/wallets/wallets.module.scss
+++ b/app/assets/components/wallets/wallets.module.scss
@@ -2,7 +2,7 @@
   position: absolute;
   opacity: 0;
   visibility: hidden;
-  transform: translateY(100px);
+  transform: translate(-50px,110px);
   max-width: 360px;
   width: 100%;
   padding: 16px;
@@ -12,11 +12,13 @@
   box-shadow: 6px 6px 12px 2px rgba(0, 0, 0, 0.258);
   transition: all 0.3s ease;
   z-index: 20;
-  @media (max-width: 541px) {
+  @media (max-width: 741px) {
+    transform: translate(20px,110px);
   }
   @media (max-width: 441px) {
-    max-width: 100vw;
-    width: 100vw;
+    transform: translate(1.5vw,110px);
+    max-width: 97vw;
+    width: 97vw;
   }
 }
 .visible {
