--- a/app/components/layout/styles/nav.module.scss
+++ b/app/components/layout/styles/nav.module.scss
@@ -2,7 +2,7 @@
 
 .row {
   position: relative;
-  max-width: 1438px;
+  max-width: 98%;
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -10,6 +10,9 @@
   background: white;
   padding: 0px 10px;
   margin-top: 8px;
+  @media (max-width:1450px) {
+    max-width: 100%;
+  }
   @media (max-width: 780px) {
     padding: 0px 16px;
   }
