--- a/app/assets/components/wallets/wallets.module.scss
+++ b/app/assets/components/wallets/wallets.module.scss
@@ -1,9 +1,8 @@
 .body {
-  position: absolute;
+  position: relative;
   opacity: 0;
   visibility: hidden;
-  transform: translate(-50px,110px);
-  max-width: 360px;
+  max-width: 440px;
   width: 100%;
   padding: 16px;
   background: #ffffff;
@@ -12,24 +11,19 @@
   box-shadow: 6px 6px 12px 2px rgba(0, 0, 0, 0.258);
   transition: all 0.3s ease;
   z-index: 20;
-  @media (max-width: 741px) {
-    transform: translate(20px,110px);
-  }
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s ease;
   @media (max-width: 441px) {
-    transform: translate(1.5vw,110px);
     max-width: 97vw;
     width: 97vw;
   }
 }
-.visible {
-  opacity: 1;
-  visibility: visible;
-  transition: all 0.3s ease;
-}
+
 .row {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .title {
   font-family: "Raleway";
@@ -79,4 +73,54 @@
   line-height: 21px;
   color: #070b35;
   padding-bottom: 3px;
+}
+
+.description {
+  margin-top: 8px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #738094;
+}
+.wlModal {
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(13, 15, 43, 0.5);
+  transition: all 0.2s ease;
+  opacity: 0;
+  visibility: hidden;
+  z-index: -10;
+}
+.visible {
+  opacity: 1;
+  visibility: visible;
+  z-index: 100;
+  transition: all 0.2s ease;
+}
+.confirmText {
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 15px;
+  color: #738094;
+  span{
+    text-decoration: underline;
+    color: #070b35;
+    cursor: pointer;
+  }
+}
+.confirm{
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  gap: 22px;
+}
+.wallet.disabled{
+  cursor:not-allowed;
 }
