--- a/app/components/layout/styles/header.module.scss
+++ b/app/components/layout/styles/header.module.scss
@@ -100,32 +100,32 @@
   align-items: center;
   justify-content: center;
   gap: 12px;
-  a{
-    padding: 6px 12px;
-    border: 1px solid #FF507D;
-    border-radius: 99px;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: right;
-    color: #FF507D;
-    transition: all 0.3s ease;
-    &:hover{
-      background: #FF507D;
-      color: #FFE5EC;
-    }
-    @media (max-width:660px) {
-      font-size: 13px;
-    }
-    @media (max-width:590px) {
-      padding: 2px 10px;
-      font-size: 12px;
-      text-align: center;
-    }
-  }
   button{
     padding: 0;
     display: flex;
+  }
+}
+.projectLink{
+  border: 1px solid #FF507D;
+  border-radius: 99px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: right;
+  color: #FF507D;
+  transition: all 0.3s ease;
+  padding: 6px 12px !important;
+  &:hover{
+    background: #FF507D;
+    color: #FFE5EC;
+  }
+  @media (max-width:660px) {
+    font-size: 13px;
+  }
+  @media (max-width:590px) {
+    padding: 2px 10px;
+    font-size: 12px;
+    text-align: center;
   }
 }
 .info{
