--- a/app/components/layout/styles/nav.module.scss
+++ b/app/components/layout/styles/nav.module.scss
@@ -51,9 +51,20 @@
 .input {
   display: flex;
   align-items: center;
-  max-width: 360px;
+  max-width: 320px;
   width: 100%;
   margin: 0px 22px 0px 19px;
+
+  @media (max-width:1460px) {
+    max-width: 280px;
+  }
+
+  @media (max-width:1310px) {
+    max-width: 200px;
+  }
+  @media (max-width:1220px) {
+    max-width: 300px;
+  }
   @media (max-width: 780px) {
     margin: 0px 2px 0px 19px;
   }
