--- a/app/assets/components/loader/loader.module.scss
+++ b/app/assets/components/loader/loader.module.scss
@@ -13,3 +13,10 @@
     max-height: 100vh;
     overflow: hidden !important;
 }
+.wrapper{
+    max-width: 300px;
+    height: auto;
+    @media (max-width:390px) {
+        max-width: 150px;
+    }
+}
