--- a/app/assets/components/modal/modal.module.scss
+++ b/app/assets/components/modal/modal.module.scss
@@ -10,6 +10,7 @@
   background: rgba(13, 15, 43, 0.5);
   transition: all 0.2s ease;
   z-index: 20000;
+  overflow-y: auto;
 }
 .closeBtn{
   position: absolute;
