--- a/app/components/layout/styles/header.module.scss
+++ b/app/components/layout/styles/header.module.scss
@@ -48,6 +48,10 @@
   @media (max-width:590px) {
     padding: 4px 8px;
   }
+  @media (max-width:400px) {
+    justify-content: center;
+    gap: 5px;
+  }
 }
 .timer{
   display: flex;
@@ -57,6 +61,12 @@
   }
   @media (max-width:460px) {
     font-size: 12px;
+    align-items: center;
+  }
+  @media (max-width:390px) {
+    font-size: 11px;
+    gap:5px;
+    align-items: center;
   }
 }
 .message{
@@ -89,6 +99,9 @@
   @media (max-width:590px) {
     justify-content: center;
     font-size: 13px;
+  }
+  @media (max-width:410px) {
+    gap:2px;
   }
   @media (max-width:401px) {
     gap: 1.5px;
@@ -126,6 +139,13 @@
     padding: 2px 10px;
     font-size: 12px;
     text-align: center;
+  }
+  @media (max-width:420px) {
+    padding: 2px 7px;
+  }
+  @media (max-width:385px) {
+    font-size: 11px;
+    padding: 2px 5px !important;
   }
 }
 .info{
