--- a/app/components/styles/marketplace.module.scss
+++ b/app/components/styles/marketplace.module.scss
@@ -7,6 +7,9 @@
     padding: 0px 15px;    
   }
 
+  @media (max-width:420px) {
+    margin-bottom: 100px;
+  }
 }
 .description {
   max-width: 695px;
@@ -44,7 +47,15 @@
     flex-direction: column;
     gap: 25px;
   }
+
+  @media (max-width:420px) {
+    flex-direction: row;
+  }
 }
 .collections{
     margin-top: 41px;
+}
+.notFound{
+  font-size: 24px;
+  font-weight: 700;
 }
