--- a/app/components/styles/user-settings.module.scss
+++ b/app/components/styles/user-settings.module.scss
@@ -154,7 +154,11 @@
 .closeBtn {
   display: flex;
   position: absolute;
+  top: 25px;
   right: 7px;
+
+  max-width: 75px;
+  height: auto;
 }
 .userInfo {
   display: flex;
