--- a/app/components/layout/styles/footer.module.scss
+++ b/app/components/layout/styles/footer.module.scss
@@ -25,7 +25,7 @@
     gap: 16px;
   }
   @media (max-width:430px) {
-    gap: 11px;
+    gap: 8px;
   }
 }
 .socialmedia {
@@ -45,6 +45,9 @@
   color: $backNav;
   opacity: 1;
   transition: all 0.22s ease;
+  button{
+    padding: 0px;
+  }
 }
 .link:hover {
   opacity: 0.7;
