--- a/app/assets/components/calendar/calendar.module.scss
+++ b/app/assets/components/calendar/calendar.module.scss
@@ -10,6 +10,10 @@
   border-radius: 16px;
   transition: all 0.3s ease;
   z-index: 20;
+
+  @media (max-width:374px) {
+    max-height: 550px;
+  }
 }
 .btn {
   display: flex;
