--- a/app/components/layout/styles/footer.module.scss
+++ b/app/components/layout/styles/footer.module.scss
@@ -27,6 +27,10 @@
   @media (max-width:430px) {
     gap: 8px;
   }
+  @media (max-width:390px) {
+    gap: 0px;
+  }
+
 }
 .socialmedia {
   display: flex;
@@ -47,6 +51,13 @@
   transition: all 0.22s ease;
   button{
     padding: 0px;
+  }
+  @media (max-width:450px) {
+    max-width: 110px;
+  }
+  @media (max-width:345px) {
+    max-width: 100px;
+    font-size: 14px;  
   }
 }
 .link:hover {
