--- a/app/components/styles/no-name.module.scss
+++ b/app/components/styles/no-name.module.scss
@@ -1,5 +1,4 @@
 .body {
-  position: relative;
   width: 100%;
   height: 100vh;
   background: linear-gradient(
@@ -7,47 +6,50 @@
     rgba(39, 122, 210, 0.35) -5%,
     rgba(255, 255, 255, 0.35) 57.47%
   );
-  @media (max-width:1340px) {
+  @media (max-width: 1340px) {
     background: linear-gradient(
       102.93deg,
       rgba(39, 122, 210, 0.169) -5%,
       rgba(255, 255, 255, 0.35) 57.47%
-    ); 
+    );
   }
 
-  @media (max-height:680px) {
+  @media (max-height: 680px) {
     height: 101.5vh;
   }
 
-  @media (max-width:1280px) {
+  @media (max-width: 1280px) {
     height: 101.8vh;
   }
-  @media (max-width:1080px) {
+  @media (max-width: 1080px) {
     height: 102.1vh;
   }
-  @media (max-width:450px) {
+  @media (max-width: 450px) {
     background: linear-gradient(
       102.93deg,
       rgba(39, 122, 210, 0.35) -5%,
       rgba(255, 255, 255, 0.35) 57.47%
     );
-    height: 100vh;    
+    height: 100vh;
+  }
+  @media (max-height:600px) {
+    height: 115vh;
   }
 }
-.burgerWrapper{
+.burgerWrapper {
   position: absolute;
-  top: 45px;
+  top: 5px;
   right: 40px;
 
-  @media (max-width:450px) {
-    top: 28px;
+  @media (max-width: 450px) {
+    top: 5px;
     right: 25px;
   }
 }
 
 .menu {
   position: absolute;
-  top: 25px;
+  top: -25px;
   right: 30px;
   opacity: 1;
   z-index: 2;
@@ -67,8 +69,8 @@
 
   transition: all 0.2s ease;
 
-  @media (max-width:450px) {
-    top: 0px;
+  @media (max-width: 450px) {
+    top: -25px;
     right: 0px;
     left: 0px;
     bottom: 0px;
@@ -76,8 +78,13 @@
     height: 100vh;
     border-radius: 0px;
   }
+  @media (max-height:600px) {
+    height: 115vh;
+  }
 }
 .container {
+  position: relative;
+
   display: flex;
   justify-content: space-between;
   max-width: 1840px;
@@ -85,18 +92,22 @@
   margin: 48px auto 0;
   padding: 0px 20px;
 
-  @media (max-width:1800px) {
+  @media (max-width: 1800px) {
     padding: 0px 20px;
   }
-  @media (max-width:450px) {
+  @media (max-width: 450px) {
     margin-top: 25px;
   }
-  
 }
 .info {
   max-width: 900px;
-  @media (max-width:1600px) {
+
+  @media (max-width: 1600px) {
     max-width: 650px;
+    margin-left: 15px;
+  }
+  @media (max-width: 920px) {
+    margin-left: 0px;
   }
 }
 .title {
@@ -120,7 +131,7 @@
   @media (max-width: 1397px) {
     margin-top: 60px;
   }
-  @media (max-width:450px) {
+  @media (max-width: 450px) {
     margin-top: 110px;
     font-size: 64px;
   }
@@ -129,22 +140,17 @@
   margin: 0;
   font-size: 40px;
   font-weight: 500;
-  background-image: linear-gradient(
-    180deg,
-    #0c0c0c 77.62%,
-    rgba(92, 31, 46, 0) 100%
-  );
-  text-shadow: rgba(0, 0, 0, 0.176) 8px 5px 13px;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  @media (max-width:1600px) {
+  color: #0c0c0c;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+
+  @media (max-width: 1600px) {
     font-size: 30px;
   }
 
-  @media (max-width:450px) {
+  @media (max-width: 450px) {
     background-image: none;
-    -webkit-background-clip:unset;
-    -webkit-text-fill-color:black;
+    -webkit-background-clip: unset;
+    -webkit-text-fill-color: black;
     font-size: 24px;
   }
 }
@@ -195,44 +201,42 @@
     box-shadow: 2px 3px 4px 0px rgba(0, 0, 0, 0.65);
   }
 }
-.videoWrapper {
-  margin-top: 170px;
-  position: relative;
-  overflow: hidden;
 
-  @media (max-width:1800px) {
-    margin-top: 120px;
+.gifWrapper {
+  margin-top: 140px;
+  figure {
+    margin: 0;
   }
-  @media (max-width:1550px) {
-    transform: translateX(40px);
+  @media (max-width: 1620px) {
+    margin-top: 80px;
   }
+}
+.nonameGif {
+  max-width: 760px;
+  height: auto;
 
-  @media (max-height:680px) {
-    margin-top: 50px;
+  @media (max-width: 1720px) {
+    max-width: 720px;
   }
-  @media (max-width:1100px) {
-    margin-top: 120px;
+  @media (max-width: 1620px) {
+    max-width: 620px;
   }
-  @media (max-width:850px) {
+  @media (max-width: 1500px) {
+    max-width: 600px;
+  }
+  @media (max-width: 1320px) {
+    max-width: 500px;
+  }
+  @media (max-width: 1120px) {
+    max-width: 450px;
+  }
+  @media (max-width: 960px) {
+    max-width: 420px;
+  }
+  @media (max-width: 920px) {
     display: none;
   }
 }
-.video {
-  max-width: 800px;
-  @media (max-width:1800px) {
-    max-width: 620px;
-  }
-
-  @media (max-width:1180px) {
-    max-width: 520px;
-  }
-
-  @media (max-width:1000px) {
-    max-width: 460px;
-  }
-}
-
-
 .visible {
   transform: translateY(0px);
   opacity: 1;
@@ -263,11 +267,11 @@
 
   transition: opacity 0.3s ease;
 
-  &:hover{
+  &:hover {
     opacity: 0.65;
   }
 }
-.chapterTitle{
+.chapterTitle {
   max-width: fit-content;
   color: #0d0f2b;
   font-size: 20px;
@@ -283,27 +287,28 @@
 
   transition: opacity 0.3s ease;
 
-  &:hover{
+  &:hover {
     opacity: 0.7;
   }
 }
 
-.closeBtn{
+.closeBtn {
+  max-width: 75px;
+  height: auto;
   position: absolute;
-  top: 30px;
+  top: 24px;
   right: 20px;
   z-index: 3;
 }
 
-.column{
+.column {
   display: flex;
   flex-direction: column;
 }
 
-.logo{
-  @media (max-width:450px) {
-    width: 180px;
+.logo {
+  @media (max-width: 450px) {
+    width: 170px;
     height: auto;
-    transform: translateY(-4px);
   }
 }
