--- a/app/components/styles/user-settings.module.scss
+++ b/app/components/styles/user-settings.module.scss
@@ -73,7 +73,6 @@
   border: 1px solid #f5f9fd;
   box-shadow: -4px 0px 25px rgba(0, 0, 0, 0.1);
   padding: 16px 16px 16px 14px;
-
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -87,6 +86,9 @@
   }
   @media (max-height: 630px) {
     padding: 8px 16px 8px 14px;
+  }
+  @media (max-width: 450px) {
+    height: 101%;
   }
 }
 .row {
@@ -159,11 +161,24 @@
 
   max-width: 75px;
   height: auto;
+
+  @media (max-width: 550px) {
+    max-width: 65px;
+    top: 25px;
+    padding: 0px !important;
+  }
 }
 .userInfo {
   display: flex;
   justify-content: space-between;
   margin: 8px 0 10px;
+
+  @media (max-width: 550px) {
+    max-width: fit-content;
+  }
+  @media (max-width:450px) {
+    margin-bottom: 6px;
+  }
 }
 .usernameInfo {
   max-width: 250px;
