--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -1,5 +1,5 @@
 .react-calendar {
-  min-height: 332px;
+  min-height: fit-content;
   max-height: 100%;
   margin-bottom: 20px;
 }
@@ -69,7 +69,7 @@
 .react-calendar__month-view__days {
   align-items: center;
   justify-content: center;
-  row-gap: 10px;
+  row-gap: 8px;
   column-gap: 18px;
 }
 .react-calendar__tile {
