--- a/app/assets/components/calendar/calendar.module.scss
+++ b/app/assets/components/calendar/calendar.module.scss
@@ -1,5 +1,12 @@
+.wrapper{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  max-height: 550px;
+}
 .body {
-  margin-top: 15px;
+  margin-top: 48px;
   position: absolute;
   width: 289px;
   min-height: 382px;
@@ -12,8 +19,10 @@
   z-index: 20;
 
   @media (max-width:444px) {
-    height:100%;
-    max-height: 520px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: fit-content;
   }
 }
 .btn {
@@ -48,7 +57,7 @@
 .apply {
   position: relative;
   width: 269px;
-  height: 48px;
+  min-height: 48px;
   background: rgba(255, 80, 125, 0.15);
   border-radius: 99px;
   font-weight: 700;
