--- a/app/components/layout/styles/header.module.scss
+++ b/app/components/layout/styles/header.module.scss
@@ -141,7 +141,7 @@
     text-align: center;
   }
   @media (max-width:420px) {
-    padding: 2px 7px;
+    padding: 2px 7px !important;
   }
   @media (max-width:385px) {
     font-size: 11px;
@@ -149,7 +149,7 @@
   }
 }
 .info{
-  @media (max-width:382px) {
+  @media (max-width:392px) {
     font-size: 11px;
   }
   @media (max-width:371px) {
