--- a/app/components/styles/no-name.module.scss
+++ b/app/components/styles/no-name.module.scss
@@ -4,7 +4,7 @@
   background: linear-gradient(
     102.93deg,
     rgba(39, 122, 210, 0.35) -5%,
-    rgba(255, 255, 255, 0.35) 57.47%
+    #FDFDFD 53.47%,
   );
   @media (max-width: 1340px) {
     background: linear-gradient(
