--- a/app/components/styles/buy-nft.module.scss
+++ b/app/components/styles/buy-nft.module.scss
@@ -7,7 +7,7 @@
     padding: 0px 15px;
   }
 
-  @media (max-width:920px) {
+  @media (max-width: 920px) {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,15 +37,15 @@
   margin-top: 16px;
   display: flex;
   gap: 30px;
-  @media (max-width:450px) {
-    gap:12px;
+  @media (max-width: 450px) {
+    gap: 12px;
     flex-direction: column;
   }
 }
 .img {
-  border-radius: 24px;
-  overflow: hidden;
   img {
+    border-radius: 24px;
+    overflow: hidden;
     max-width: 600px;
     width: 100%;
     height: auto;
@@ -55,6 +55,7 @@
       border-radius: 24px;
       overflow: hidden;
     }
+    box-shadow: 1.5px 1.5px 4px 1px rgba(0, 0, 0, 0.194);
   }
 }
 .info {
@@ -119,7 +120,7 @@
   align-items: center;
   gap: 7px;
 
-  @media (max-width:920px) {
+  @media (max-width: 920px) {
     flex-direction: column;
     align-items: flex-start;
     gap: 12px;
@@ -129,11 +130,11 @@
   width: 100%;
   display: flex;
   gap: 8px;
-  
-  @media (max-width:720px) {
+
+  @media (max-width: 720px) {
     flex-direction: column;
   }
-  @media (max-width:450px) {
+  @media (max-width: 450px) {
     flex-direction: row;
   }
 }
@@ -202,14 +203,14 @@
   }
 }
 
-.nftDetailsDesktop{
-  @media (max-width:920px) {
+.nftDetailsDesktop {
+  @media (max-width: 920px) {
     display: none;
   }
 }
-.nftDetailsMobile{
+.nftDetailsMobile {
   display: none;
-  @media (max-width:920px) {
+  @media (max-width: 920px) {
     margin-top: 30px;
     width: 100%;
     display: block;
