--- a/app/assets/components/ListForSale/list-for-sale.module.scss
+++ b/app/assets/components/ListForSale/list-for-sale.module.scss
@@ -1,6 +1,10 @@
 .body {
   margin-top: 21px;
   margin-bottom: 17px;
+  @media (max-height: 635px) {
+    margin-top: 13px;
+    margin-bottom: 13px;
+  }
 }
 .label {
   font-size: 14px;
@@ -104,6 +108,9 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  @media (max-height: 635px) {
+    margin-top: 10px;
+  }
 }
 .date {
   max-width: 111px;
@@ -149,7 +156,11 @@
 }
 
 .results {
-  margin-top: 37px;
+  margin-top: 15px;
+
+  @media (max-height: 635px) {
+    margin-top: 10px;
+  }
 }
 
 .visible {
@@ -192,4 +203,90 @@
   color: #000;
   font-size: 16px;
   font-weight: 600;
+}
+
+.searchWrapper {
+  position: relative;
+}
+
+.searchResult {
+  position: absolute;
+  z-index: 1;
+  top: 63px;
+  max-width: 320px;
+  width: 100%;
+  border-radius: 4px;
+
+  max-height: 202px;
+  overflow-y: auto;
+  background: white;
+  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.208);
+
+  display: flex;
+  flex-direction: column;
+}
+.resultWrapper {
+  width: 100%;
+}
+.searchItemImg {
+  max-width: 50px;
+  border-radius: 50%;
+}
+.searchItem {
+  padding: 8px;
+
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
+  cursor: pointer;
+  background: white;
+
+  transition: background 0.3s ease;
+
+  &:hover {
+    background: rgba(128, 128, 128, 0.283);
+  }
+}
+
+.searchItemBody {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+}
+
+.searchItemTitle {
+  font-size: 17px;
+  font-weight: 600;
+}
+.searchItemDesc {
+  font-size: 14px;
+}
+
+.selectedCollection {
+  margin-top: 8px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+
+  max-width: 328px;
+  width: 100%;
+  padding: 7px;
+  border-radius: 8px;
+  background: #f8f8f9;
+}
+
+.removeCollection {
+  position: absolute;
+  right: 15px;
+
+  button {
+    padding: 6px 12px;
+  }
+}
+
+.approveNftImg {
+  max-width: 60px;
 }
