--- a/app/components/styles/collections.module.scss
+++ b/app/components/styles/collections.module.scss
@@ -1,7 +1,7 @@
 .body {
   display: flex;
   flex-direction: column;
-  gap: 52px;
+  gap: 30px;
   @media (max-width:420px) {
     gap: 150px;
   }
@@ -68,4 +68,22 @@
 
 .arrowBtn.prevBtn{
   left: -50px;
+}
+.moreBtnWrapper {
+  max-width: fit-content;
+  margin: 0px auto;
+}
+.moreBtn {
+  color: #0d0f2b;
+  font-size: 20px;
+  font-weight: 700;
+
+  transition: opacity 0.3s ease;
+
+  &:hover{
+    opacity: 0.7;
+  }
+  transform: translateY(-15px);
+  @media (max-width:450px) {
+  }
 }
