--- a/app/components/styles/nft.module.scss
+++ b/app/components/styles/nft.module.scss
@@ -10,6 +10,9 @@
     width: 84vw;
     max-height: 240px;
   }
+  @media (max-width: 385px) {
+    max-width: 307.5px;
+  }
 }
 .body {
   position: relative;
@@ -18,10 +21,15 @@
   background: #fff;
   box-shadow: 4px 4px 10px 0px #eee;
   @media (max-width: 420px) {
+    box-shadow:4px 1px 10px 0px #eee;
     max-width: 84vw;
     width: 100%;
+    margin: 0 auto;
     border-bottom-left-radius: 0px;
     border-bottom-right-radius: 0px;
+  }
+  @media (max-width: 385px) {
+    max-width: 350px;
   }
 }
 .label {
@@ -58,7 +66,7 @@
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.164);
   color: black;
 
-  @media (max-width:420px) {
+  @media (max-width: 420px) {
     top: 200px;
   }
 }
@@ -158,13 +166,16 @@
   transition: height 0.4s ease;
   @media (max-width: 420px) {
     width: 84vw;
-    top: 305px;
+    top: 301px;
     opacity: 1;
     height: 70px;
     background: #fff;
     box-shadow: 4px 4px 10px 0px #eee;
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
+  }
+  @media (max-width: 385px) {
+    width: 307px;
   }
 }
 .body:hover .buttons {
@@ -182,11 +193,13 @@
 
   @media (max-width: 420px) {
     width: 84vw;
-    top: 305px;
+    top: 301px;
     opacity: 1;
     height: 70px;
     background: #fff;
     transition: height 0.4s ease;
   }
+  @media (max-width: 385px) {
+    width: 307px;
+  }
 }
-
