--- a/styles/global.css
+++ b/styles/global.css
@@ -190,22 +190,21 @@ input[type="range"]::-moz-range-track {
   z-index: -10 !important;
 }
 
-@media (max-width: 420px) {
+@media (max-width: 450px) {
   .nfts-swiper {
-    width: 85vw;
+    padding: 0px 6px !important;
+    width: 370px;
   }
   .swiper-slide.nft-slide {
-    max-width: 85vw;
+    max-width: 370px;
     justify-content: center;
   }
   .nfts-swiper .swiper-wrapper {
     height: 385px;
   }
-  
 }
 @media (max-width: 385px) {
   .nfts-swiper {
-    padding: 0px 4px !important;
     max-width: 315px;
     width: 100%;
   }
@@ -238,11 +237,11 @@ input[type="range"]::-moz-range-track {
   font-weight: 600;
   line-height: normal;
 }
-.custom-chart-tooltip span{
+.custom-chart-tooltip span {
   color: white;
 }
-@media (max-width:520px) {
-  .custom-chart-tooltip{
+@media (max-width: 520px) {
+  .custom-chart-tooltip {
     font-size: 11.5px;
     max-width: 160px;
     height: 44px;
@@ -260,16 +259,16 @@ input[type="range"]::-moz-range-track {
 .custom-chart-xasis .recharts-cartesian-axis-tick line {
   display: none;
 }
-.custom-chart-xasis line{
-  stroke: #EEE;
+.custom-chart-xasis line {
+  stroke: #eee;
 }
-.custom-chart-yasis line{
-  stroke: #EEE;
+.custom-chart-yasis line {
+  stroke: #eee;
 }
 .custom-chart-yasis .recharts-cartesian-axis-tick line {
   display: none;
 }
-.custom-chart-yasis tspan{
+.custom-chart-yasis tspan {
   color: #738094;
   text-align: center;
   font-size: 12px;
@@ -278,7 +277,7 @@ input[type="range"]::-moz-range-track {
   font-weight: 400;
   line-height: normal;
 }
-.custom-chart-container{
+.custom-chart-container {
   position: absolute;
   top: 8px;
   left: -30px;
@@ -289,39 +288,39 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
 
-@media (max-width:1000px) {
-  .custom-chart-container svg{
-    max-width: 500px !important; 
+@media (max-width: 1000px) {
+  .custom-chart-container svg {
+    max-width: 500px !important;
     width: 100% !important;
-  } 
+  }
 }
 
-@media (max-width:920px) {
-  .custom-chart-container{
+@media (max-width: 920px) {
+  .custom-chart-container {
     width: 100% !important;
   }
-  .recharts-wrapper{
+  .recharts-wrapper {
     width: 100% !important;
   }
-  .custom-chart-container svg{
-    max-width: 80vw !important; 
+  .custom-chart-container svg {
+    max-width: 80vw !important;
     height: auto !important;
     width: 100% !important;
-  } 
+  }
 }
 
-@media (max-width:520px) {
-  .custom-chart-container{
+@media (max-width: 520px) {
+  .custom-chart-container {
     position: absolute;
     top: 8px;
     left: -20px;
   }
-  
-  .custom-chart-container svg{
-    max-width: 100% !important; 
-  } 
+
+  .custom-chart-container svg {
+    max-width: 100% !important;
+  }
 }
