--- a/app/components/styles/nft.module.scss
+++ b/app/components/styles/nft.module.scss
@@ -21,6 +21,7 @@
   border-radius: 16px;
   background: #fff;
   box-shadow: 4px 4px 10px 0px #eee;
+
   @media (max-width: 450px) {
     box-shadow:4px -5px 10px 0px #eee;
     max-width: 85vw;
@@ -77,6 +78,8 @@
   flex-direction: column;
   gap: 10px;
   padding: 10px 14px;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
 }
 .row {
   display: flex;
