--- a/app/assets/components/ListForSale/list-for-sale.module.scss
+++ b/app/assets/components/ListForSale/list-for-sale.module.scss
@@ -27,6 +27,7 @@
   height: 35px;
   border-radius: 8px;
   background: #f8f8f9;
+  font-family: inherit;
   &::placeholder {
     color: rgba(115, 128, 148, 0.5);
     font-size: 14px;
