--- a/app/assets/components/timeInput/time-input.module.scss
+++ b/app/assets/components/timeInput/time-input.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   input {
-    margin-top: 4px;
+    font-family: inherit;
     margin-left: 3px;
     display: flex;
     align-items: center;
@@ -14,6 +14,10 @@
     &::placeholder {
       color: rgba(115, 128, 148, 0.5);
       font-size: 14px;
+    }
+    @media (max-width:440px) {
+      min-width: 23px;
+      width: 100%;
     }
   }
   width: 100%;
