--- a/app/assets/components/coursesInfo/courses.module.scss
+++ b/app/assets/components/coursesInfo/courses.module.scss
@@ -1,3 +1,4 @@
+
 .arrow {
   max-width: 91px;
   transform: rotate(90deg);
@@ -48,6 +49,10 @@
     rgba(255, 255, 255, 0.34) 100%
   );
   box-shadow: 0px 1px 5px 0px rgba(35, 34, 34, 0.92);
+
+  @media (max-width:450px) {
+    max-height: 260px;
+  }
 }
 .moreInfo {
   position: absolute;
