--- a/app/assets/components/studyFormat/study.module.scss
+++ b/app/assets/components/studyFormat/study.module.scss
@@ -14,6 +14,28 @@
     @media (max-width:1320px) {
       justify-content: center;
     }
+
+    @media (max-width: 450px) {
+      justify-content: flex-start;
+      overflow-x: auto;
+      flex-wrap: nowrap;
+  
+      &::-webkit-scrollbar-track {
+        background: transparent;
+      }
+      &::-webkit-scrollbar-thumb {
+        background: #eaf2fb;
+        border-radius: 99px;
+        border: 5px solid transparent;
+        background-clip: content-box;
+      }
+      &::-webkit-scrollbar-thumb:hover {
+        background: #d9e9fc;
+        border-radius: 99px;
+        border: 4px solid transparent;
+        background-clip: content-box;
+      }
+    }
 }
 .item {
   position: relative;
@@ -28,9 +50,15 @@
     right: 0;
     bottom: 0;
   }
+  @media (max-width:450px) {
+    min-width: 290px;
+    margin-bottom: 20px;
+  }
 }
 
 .itemText {
+  display: flex;
+  align-items: center;
   position: absolute;
   top: 46%;
   height: 88px;
