--- a/app/admin/styles/header-settings.module.scss
+++ b/app/admin/styles/header-settings.module.scss
@@ -43,3 +43,20 @@
 .inputs{
     flex-wrap: wrap;
 }
+.isVisibleCheckbox{
+    margin-top: 10px;
+    label{
+        margin-left: 7px;
+    }
+    input{
+        margin-left: 7px;
+    }
+}
+.isVisibleLabel{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+    color: #738094;
+    margin-left: 4px;
+    margin-bottom: 10px;
+}
