--- a/app/assets/components/aboutUs/about.module.scss
+++ b/app/assets/components/aboutUs/about.module.scss
@@ -1,4 +1,6 @@
 .body {
+  max-width: 1180px;
+  margin: 0 auto;
   h4 {
     text-align: left;
     margin-bottom: 22px;
@@ -9,7 +11,7 @@
 }
 .description {
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 400;
   background: linear-gradient(
     180deg,
     rgba(5, 29, 72, 0.89) 0%,
@@ -24,9 +26,33 @@
   display: flex;
   align-items: flex-start;
   gap: 43px;
-  @media (max-width:720px) {
+  @media (max-width: 720px) {
     flex-wrap: wrap;
     justify-content: center;
+  }
+
+  @media (max-width: 450px) {
+    justify-content: flex-start;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+    &::-webkit-scrollbar-track-piece {
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #eaf2fb;
+      border-radius: 99px;
+      border: 5px solid transparent;
+      background-clip: content-box;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+      background: #d9e9fc;
+      border-radius: 99px;
+      border: 4px solid transparent;
+      background-clip: content-box;
+    }
   }
 }
 .item {
@@ -36,6 +62,11 @@
   align-items: center;
   flex-direction: column;
   gap: 15px;
+
+  @media (max-width: 450px) {
+    min-width: 275px;
+    margin-bottom: 12px;
+  }
 }
 .itemTitle {
   color: #0d0f2b;
