--- a/app/assets/components/authors/authors.module.scss
+++ b/app/assets/components/authors/authors.module.scss
@@ -19,6 +19,31 @@
   @media (max-width:820px) {
     justify-content: center;
   }
+
+  
+  @media (max-width: 450px) {
+    justify-content: flex-start;
+    overflow-x: auto;
+    flex-wrap: nowrap;
+
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+    &::-webkit-scrollbar-track-piece {
+    }
+    &::-webkit-scrollbar-thumb {
+      background: #eaf2fb;
+      border-radius: 99px;
+      border: 5px solid transparent;
+      background-clip: content-box;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+      background: #d9e9fc;
+      border-radius: 99px;
+      border: 4px solid transparent;
+      background-clip: content-box;
+    }
+  }
 }
 .author {
   max-width: 230px;
@@ -29,6 +54,11 @@
   gap: 10px;
   @media (max-width:450px) {
     max-width: 70vw;
+  }
+
+  @media (max-width:450px) {
+    min-width: 70vw;
+    margin-bottom: 15px;
   }
 }
 .authorImg {
