--- a/app/assets/components/courses/courses.module.scss
+++ b/app/assets/components/courses/courses.module.scss
@@ -11,6 +11,7 @@
   }
 }
 .card {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
@@ -29,7 +30,6 @@
 
   span {
     color: #000;
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.25);
     font-size: 32px;
     font-weight: 800;
     margin-bottom: 5px;
@@ -49,7 +49,7 @@
 .feature {
   color: #070b35;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 500;
   display: flex;
   align-items: center;
 
