--- a/app/assets/components/directions/more/more.module.scss
+++ b/app/assets/components/directions/more/more.module.scss
@@ -10,7 +10,6 @@
 }
 .head {
   h2 {
-    text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.25);
     font-size: 48px;
     font-style: normal;
     font-weight: 700;
@@ -31,15 +30,8 @@
 .description {
   margin: 25px 0 18px;
   font-size: 24px;
-  font-weight: 600;
-  background: linear-gradient(
-    180deg,
-    rgba(5, 29, 72, 0.89) 0%,
-    rgba(0, 0, 0, 0.72) 100%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  font-weight: 500;
+
   @media (max-width: 840px) {
     margin: 35px 0 18px;
     font-size: 20px;
@@ -64,7 +56,7 @@
 .blockTitle {
   color: #070b35;
   font-size: 32px;
-  font-weight: 800;
+  font-weight: 700;
   margin-bottom: 25px;
   @media (max-width: 840px) {
     font-size: 28px;
@@ -90,7 +82,7 @@
   gap: 10px;
   color: #000;
   font-size: 28px;
-  font-weight: 600;
+  font-weight: 500;
   span {
     display: block;
     line-height: 100%;
@@ -101,11 +93,6 @@
 }
 .nextArrowWrapper {
   margin: 34px 60px;
-
-  &:last-child {
-    max-width: fit-content;
-    margin: 34px auto;
-  }
 }
 .bottomText {
   max-width: 690px;
@@ -113,7 +100,7 @@
   color: #000;
   text-align: center;
   font-size: 32px;
-  font-weight: 700;
+  font-weight: 600;
   @media (max-width: 840px) {
     font-size: 24px;
   }
@@ -127,13 +114,17 @@
   span {
     color: #070b35;
     text-shadow: 0px 2px 1px rgba(0, 0, 0, 0.25);
-    font-size: 58px;
+    font-size: 46px;
     font-weight: 700;
     @media (max-width: 840px) {
-      font-size: 42px;
+      font-size: 38px;
     }
   }
 }
 .cartWrapper{
   max-width:75px;
+}
+.last{
+  max-width: fit-content;
+  margin: 34px auto;
 }
