--- a/app/assets/components/reviews/reviews.module.scss
+++ b/app/assets/components/reviews/reviews.module.scss
@@ -1,24 +1,30 @@
 .body {
+
   margin-top: 80px;
   h4 {
     text-align: left;
     margin-left: 24px;
   }
+  @media (max-width:1330px) {
+    max-width: 840px;
+    margin: 80px auto 0;
+
+    h4 {
+      text-align: left;
+      margin-left: 4px;
+    }
+  }
+  @media (max-width:890px) {
+    max-width: 395px;
+  }
 }
 .items {
   margin-top: 25px;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  gap: 40px;
-  @media (max-width:820px) {
-    flex-wrap: wrap;
-  }
-  @media (max-width:450px) {
-    gap: 30px;
-  }
 }
 .item {
+  cursor: pointer;
+  margin-bottom: 10px;
+  
   padding: 14px;
   max-width: 385px;
   width: 100%;
@@ -39,9 +45,9 @@
   gap: 6px;
   span {
     color: rgba(7, 11, 53, 0.5);
-    font-family: "Gilroy SemiBold";
+    font-family: 'Raleway','sans-serif';
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 400;
   }
   img {
     width: 32px;
@@ -51,14 +57,15 @@
 }
 .name {
   margin: 3px 0 10px;
-  color: #0d0f2b;
-  font-family: "Gilroy Bold";
+  font-family: 'Raleway','sans-serif';
+  color: #0D0F2B;
   font-size: 24px;
-  font-weight: 400;
+  font-weight: 700;
 }
 .itemBody {
   color: #738094;
   font-family: 'Gilroy Regular';
   font-size: 16px;
   font-weight: 400;
+  color: #0D0F2B;
 }
