--- a/app/components/styles/academy.module.scss
+++ b/app/components/styles/academy.module.scss
@@ -6,6 +6,11 @@
   @media (max-width: 1320px) {
     padding: 0px 15px;
   }
+
+  @media (max-width:450px) {
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
 }
 .joinUs {
   max-width: 594px;
@@ -35,6 +40,10 @@
     justify-content: center;
     gap: 12px;
   }
+  @media (max-width:450px) {
+    max-width: 240px;
+    margin: 20px auto 20px;
+  }
 }
 .nav a {
   font-family: "Raleway";
@@ -52,6 +61,7 @@
 
 .langs {
   display: flex;
+  gap: 2px;
   position: absolute;
   top: 10px;
   right: 85px;
@@ -74,10 +84,7 @@
   
 
 }
-.lang:nth-child(1)::after{
-  content: '/';
-  margin-left: 10px;
-}
+
 .lang {
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.25);
   font-size: 16px;
@@ -111,7 +118,7 @@
 
   & div {
     font-size: 24px;
-    font-weight: 600;
+    font-weight: 500;
     background: linear-gradient(
       180deg,
       rgba(5, 29, 72, 0.89) 0%,
@@ -144,7 +151,7 @@
   }
 }
 .soldOut {
-  max-width: 70px;
+  max-width: 45px;
 }
 .aboutUs {
   margin-top: 20px;
@@ -166,4 +173,7 @@
 }
 .community {
   margin-top: 109px;
+}
+.soldOutWrapper{
+  margin-right: 28px;
 }
