--- a/app/assets/components/authors/authors.module.scss
+++ b/app/assets/components/authors/authors.module.scss
@@ -13,50 +13,54 @@
   }
 }
 .authors {
+  width: 100%;
   display: flex;
-  flex-wrap: wrap;
   gap: 30px;
-  @media (max-width:820px) {
-    justify-content: center;
+  justify-content: flex-start;
+  overflow-x: auto;
+  flex-wrap: nowrap;
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: #eaf2fb;
+    border-radius: 99px;
+    border: 5px solid transparent;
+    background-clip: content-box;
+  }
+  &::-webkit-scrollbar-thumb:hover {
+    background: #d9e9fc;
+    border-radius: 99px;
+    border: 4px solid transparent;
+    background-clip: content-box;
   }
 
-  
-  @media (max-width: 450px) {
-    justify-content: flex-start;
-    overflow-x: auto;
-    flex-wrap: nowrap;
-
-    &::-webkit-scrollbar-track {
-      background: transparent;
-    }
-    &::-webkit-scrollbar-track-piece {
-    }
-    &::-webkit-scrollbar-thumb {
-      background: #eaf2fb;
-      border-radius: 99px;
-      border: 5px solid transparent;
-      background-clip: content-box;
-    }
-    &::-webkit-scrollbar-thumb:hover {
-      background: #d9e9fc;
-      border-radius: 99px;
-      border: 4px solid transparent;
-      background-clip: content-box;
-    }
+  @media (max-width:1380px) {
+    max-width: 1300px;
+    margin: 0 auto;
+  }
+  @media (max-width:1320px) {
+    max-width: 1200px;
+  }
+  @media (max-width:1240px) {
+    max-width: 84vw;
+  }
+  @media (max-width:450px) {
+    max-width: 100%;
   }
 }
 .author {
   max-width: 230px;
+  min-width: 230px;
   width: 100%;
 
   display: flex;
   flex-direction: column;
   gap: 10px;
+  margin-bottom: 20px;
   @media (max-width:450px) {
     max-width: 70vw;
-  }
-
-  @media (max-width:450px) {
     min-width: 70vw;
     margin-bottom: 15px;
   }
