--- a/app/admin/styles/users.module.scss
+++ b/app/admin/styles/users.module.scss
@@ -20,7 +20,7 @@
 .user{
     width: 1800px;
     display: grid;
-    grid-template-columns: 0.35fr 0.8fr 0.3fr 1.3fr 0.7fr 0.5fr 0.4fr 1.3fr;
+    grid-template-columns: 0.35fr 0.35fr 0.8fr 0.3fr 1.3fr 0.7fr 0.5fr 0.4fr 1.3fr;
     align-items: center;
 }
 .item{
