--- a/app/assets/components/claimData/claim-data.module.scss
+++ b/app/assets/components/claimData/claim-data.module.scss
@@ -9,7 +9,7 @@
   font-size: 16px;
   line-height: 19px;
   color: #738094;
-  margin-bottom: 12px;
+  margin-bottom: 5px;
 }
 .info {
   display: flex;
@@ -17,7 +17,7 @@
   gap: 3px;
 }
 .key {
-  font-weight: 600;
+  font-weight: 400;
   font-size: 14px;
   line-height: 16px;
   color: #738094;
@@ -27,4 +27,23 @@
   font-size: 24px;
   line-height: 28px;
   color: #070b35;
+}
+.dates {
+  margin: 9px 3px 11px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+
+  color: #738094;
+  font-size: 14px;
+  font-weight: 400;
+}
+.claimValue {
+  color: #070b35;
+  font-family: Raleway;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin: 5px 0 5px;
 }
