--- a/app/assets/components/endedProject/ended.module.scss
+++ b/app/assets/components/endedProject/ended.module.scss
@@ -1,4 +1,5 @@
 .body {
+
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -6,8 +7,10 @@
     padding: 0 12px;
     margin-bottom: 40px;
   }
+  margin-bottom: 70px;
 }
 .info {
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,10 +46,12 @@
   }
 }
 .card {
+  max-width: 420px;
+  margin:  0 auto;
   display: flex;
   flex-direction: column;
   gap: 17px;
-  padding: 16px;
+  padding: 25px;
   background: #f5f9fd;
   border-radius: 16px;
 }
