--- a/app/assets/components/navModal/nav-modal.module.scss
+++ b/app/assets/components/navModal/nav-modal.module.scss
@@ -36,10 +36,10 @@
     left: 40%;
   }
   @media (max-width: 541px) {
-    top: 66px;
+    top: 96px;
   }
   @media (max-width: 441px) {
-    top: 70px;
+    top: 100px;
     left: 33%;
   }
   @media (max-width: 376px) {
@@ -47,6 +47,7 @@
   }
 }
 .link {
+  width: 240px;
   padding: 14.5px;
   display: flex;
   gap: 10px;
