--- a/app/assets/components/stakeCard/stake-card.module.scss
+++ b/app/assets/components/stakeCard/stake-card.module.scss
@@ -1,7 +1,7 @@
 .body {
   max-width: 438px;
   width: 100%;
-  max-height: 179px;
+  max-height: 229px;
   padding: 16px;
   border: 2px solid #f5f9fd;
   border-radius: 16px;
@@ -27,14 +27,12 @@
   align-items: center;
   flex-direction: column;
   gap: 2px;
-
 }
 .key {
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
   color: #738094;
-
 }
 .value {
   font-weight: 700;
@@ -46,4 +44,24 @@
 .btns {
   display: flex;
   gap: 10px;
+}
+.stakeLabel {
+  margin-top: 7px;
+  color: #738094;
+  font-size: 14px;
+  font-weight: 400;
+  @media (max-width:450px) {
+    max-width: 120px;
+  }
+}
+.valueInput {
+  max-width: 90px;
+  margin: 0 auto;
+  color: #0d0f2b;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
