--- a/app/components/UI/buttons/square-light.module.scss
+++ b/app/components/UI/buttons/square-light.module.scss
@@ -1,7 +1,6 @@
 .btn {
   width: 100%;
   padding: 12px 16px;
-  background: #ffe5ec;
   border-radius: 8px;
   font-weight: 700;
   font-size: 20px;
@@ -9,11 +8,17 @@
   text-align: center;
   cursor: pointer;
   color: #ff507d;
+  background: #ffe5ec;
 
   transition: all 0.3s ease;
   &:hover {
     color: #ffffff;
     background: #fd2f66;
+  }
+  &:disabled{
+    color: #ff507d;
+    background: #ffe5ec;
+    cursor:not-allowed;
   }
 }
 .btnRed {
@@ -37,7 +42,7 @@
   
   &:disabled{
     background: #ff507ca0;
-    cursor: default;
+    cursor:not-allowed
   }
 
 }
