--- a/app/components/styles/portfolio.module.scss
+++ b/app/components/styles/portfolio.module.scss
@@ -7,5 +7,18 @@
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
-    justify-content: center;
+    @media (max-width:1100px) {
+        justify-content: center;
+    }
+}
+.projectsEmptyText{
+    margin: 0 auto;
+    font-size: 18px;
+    padding: 20px;
+    border-radius: 15px;
+    border: 1px solid #fe1b53;
+    @media (max-width:450px) {
+        max-width: 90vw;
+        text-align: center;
+    }
 }
