--- a/app/components/styles/table-item.module.scss
+++ b/app/components/styles/table-item.module.scss
@@ -13,10 +13,10 @@
   position: relative;
   display: grid;
   align-items: center;
-  grid-template-columns: 0.2fr 0.3fr 0.3fr 0.3fr 0.35fr 0.4fr 0.4fr 0.35fr;
+  grid-template-columns: 0.4fr 0.35fr 0.3fr 0.3fr 0.23fr 0.4fr 0.4fr 0.35fr;
 
   @media (max-width:880px) {
-    grid-template-columns: 0.2fr 0.3fr 0.3fr 0.3fr 0.35fr 0.35fr 0.35fr 0.35fr;
+    grid-template-columns: 0.35fr 0.2fr 0.3fr 0.3fr 0.35fr 0.35fr 0.35fr 0.35fr;
     span {
       font-size: 13px;
       line-height: 16px;
@@ -55,21 +55,26 @@
   font-size: 14px;
   line-height: 16px;
   text-align: right;
-  color: #ff507d;
-
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 59px;
+  max-width: 72px;
   height: 32px;
-  background: #ffe5ec;
   border-radius: 8px;
   cursor: pointer;
   transition: all 0.3s ease;
-
+  background: rgba(5, 201, 161, 0.1);
+  color: #05c9a1;
   &:hover {
+    background: rgba(2, 166, 133, 0.548);
     color: white;
-    background: #ff507d;
+  }
+  &:disabled{
+    cursor: not-allowed;
+  }
+  &:disabled:hover{
+    background: rgba(5, 201, 161, 0.1);
+    color: #05c9a1;
   }
 }
 .bold {
@@ -91,4 +96,13 @@
 .locked{
   font-weight: 600;
   color: #FF3A4A;
+}
+.claimed{
+  background: rgba(128, 128, 128, 0.066);
+  color: rgba(0, 0, 0, 0.356);
+
+}
+.btn.claimed:hover{
+    background: rgba(128, 128, 128, 0.228);
+    color: rgba(0, 0, 0, 0.221);
 }
